--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
+body, html {
+    height: 100%;
+}
+
 .container {
     display: flex;
+    width: 800px;
+    height: 800px;
     flex-wrap: wrap;
+    box-sizing: border-box;
 }
 
 .gridDiv {
+    display: inline-block;
     border: 1px solid black;
-    width: 50px;
-    height: 50px;
+    box-sizing: border-box;
     background-color: white;
+
 }
